--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,9 @@
-{% load static %}<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Boards</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  </head>
-  <body>
-    <div class="container">
-      <ol class="breadcrumb my-4">
+{% extends 'base.html' %}%}
+{% block breadcrumb%}
         <li class="breadcrumb-item active">Boards</li>
-      </ol>
+      {% endblock %}
+
+    {% block content%}
       <table class="table">
         <thead class="thead-inverse">
           <tr>
@@ -36,3 +30,4 @@
     </div>
   </body>
 </html>
+{% endblock %}
