--- a/templates/base.html
+++ b/templates/base.html
@@ -1,26 +1,28 @@
-{% load static%}<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
-            </style>
-        <meta charset = "utf-8">
-        <title>{% block title%}Django Boards{% endblock %}</title>
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-              <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
-            </div>
-          </nav>
+  <head>
+    <meta charset="utf-8">
+    <title>{% block title %}Django Boards{% endblock %}</title>
+    <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    {% block stylesheet %}{% endblock %}  <!-- HERE -->
+  </head>
+  <body>
+    {% block body %}  <!-- HERE -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <ol class="breadcrumb my-4">
-                {% block breadcrumb %}
-                {% endblock %}
-            </ol>
-                {% block content %}
-                {% endblock %}
+          <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
         </div>
-    </body>
+      </nav>
+      <div class="container">
+        <ol class="breadcrumb my-4">
+          {% block breadcrumb %}
+          {% endblock %}
+        </ol>
+        {% block content %}
+        {% endblock %}
+      </div>
+    {% endblock body %}  <!-- AND HERE -->
+  </body>
 </html>
