--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
                   <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
                 </form>
               {% endif %}
+            
             </div>
           </div>
         </nav>
@@ -53,6 +54,6 @@
         {% block content %}
         {% endblock %}
       </div>
-    {% endblock body %}  <!-- AND HERE -->
+      <!-- AND HERE -->
   </body>
 </html>
